--- a/wiki/CommentaryOnV8.wiki
+++ b/wiki/CommentaryOnV8.wiki
@@ -23,4 +23,4 @@ In my opinion, most of these problems are a direct side-effect of v8 having been
 
 Another hindrance is the relative lack of v8 documentation. Most functions and classes aren't documented or have only a single line with no real information. This means a great deal of experimentation in order to find out if something will or won't work in v8 (and another amount of guesswork as to whether it's actually _legal_ to do it that way in v8).
 
-As i enjoy writing, and i tend to write "insane" API docs (to quote one user), i did contact the v8 team about contributing API documentation. However, the process of getting involved in the project is just too much effort for my tastes. Why can't i just upload a patch without having to install (and learn) a custom set of tools? Maybe one day Google will pay me to document v8 (dream on!), but until then using v8 will require a lot more experimentation and guesswork that it really should.
+As i enjoy writing, and i tend to write "insane" API docs (to quote one user), i did contact the v8 team about contributing API documentation. However, the process of getting involved in the project is just too much effort for my tastes. Why can't i just upload a patch without having to install (and learn) a custom set of tools? Maybe one day Google will pay me to document v8 (dream on!), but until then using v8 will require a lot more experimentation and guesswork than it really should.
