--- a/wiki/PluginSQLite3.wiki
+++ b/wiki/PluginSQLite3.wiki
@@ -1,7 +1,7 @@
 #summary JS Bindings for SQLite3
 #labels Phase-UserDocs,Topic-Plugins
 
-*ACHTUNG:* the current version (20090313+) of the C-style interface provided by this plugin is sorely broken because its in the middle of a rewrite. Don't use it until this warning note goes away. The OO API "should" be okay (works for me).
+*ACHTUNG:* the current version (20090313+) of the C-style interface provided by this plugin is sorely broken because it is in the middle of a rewrite. Don't use it until this warning note goes away. The OO API "should" be okay (works for me).
 
 
 <wiki:toc max_depth="3"/>
